Fix bio spacing

--- a/src/style.css
+++ b/src/style.css
@@ -304,7 +304,7 @@ a:focus {
 
 .bio {
   display: flex;
-  margin-bottom: var(--spacing-16);
+  margin-bottom: var(--spacing-8);
 }
 
 .bio p {
@@ -359,6 +359,10 @@ a:focus {
 .gatsby-highlight {
   margin-bottom: var(--spacing-8);
 }
+
+/* Video component classes */
+
+.
 
 /* About page component classes */
 
